# thinkgraph

./: .gitignore  README.markdown  README.txt  graph.py  parser.py  pyproject.toml  requirements.txt  setup.py  thinkingprocesses.ebnf
examples/: ec.dot  ec.tkg  ex-1.dot  ex-1.tkg  ex-2.dot  ex-2.tkg
thinkgraph/: graph.py  parser.py
